# teamRNX

./: README.md  data_downloader.py  load_hist_data.py  main.py  main2.py  test_cctx.py
backtesting/: main.py  trade_sim.py
backtesting_other/: main.py  take_profit_stop_loss_labeller.py
bots/: bot_portfolio.py  order.py  rsi_bot.py
cctx_module/: cctx_interface.py  data_since6months_freq1hBTC.csv  data_since6months_freq1hTESTBTC.csv
superchain-integration/: Cargo.toml
superchain-integration/src/: main.rs
technical_indicators/: rolling_avg.py  rolling_avgV2.py  rsi.py  rsi_mini.py  sma_crossover.py
tests/: test_rolling_avg.py
trade_sim_other/: market_sim.py
trade_sim_other/trade_bots/abc_bots/: abstract_bot.py  predictive_trade_bot.py
trading_module/: trader.py  traderv2.py
utils/: build_ohlcv.py
