[package]
name = "superchain-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
superchain-client = {git="https://github.com/SuperChainNetwork/superchain-client.git"}
tokio = { version = "1.21.2", features = ["rt-multi-thread"]}
dotenv = "0.15.0"
tungstenite = { version = "0.17.2"}